update to qual journey

--- a/app/views/auth/_account-info.html
+++ b/app/views/auth/_account-info.html
@@ -10,4 +10,4 @@
     your name and date of birth
   </li>
 </ul>
-  <p>Once you've created an account, you can continue to {{ data.qts }}.</p>
+  <p>Once you've created an account, you can continue {{ data.onwardContinue or data.qts }}.</p>
