--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,7 +24,12 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="govuk-heading-m">QTS integration </h2>
+<h2 class="govuk-heading-m">{{ data.qs }}  </h2>
+<p><a href="/qualifications/start">Qualifications start page</a> </p>
+
+
+
+<h2 class="govuk-heading-m">{{ data.qts }}  </h2>
 <p><a href="/qts/eligibility/start-eligibility">Check eligibility start page</a> </p>
 <p><a href="/qts/eligibility/eligible">Eligible user start page </a> </p>
 <p><a href="/qts/apply-for-qts">QTS task list - account view </a> </p>
