--- a/app/views/qts/eligibility/start-eligibility.html
+++ b/app/views/qts/eligibility/start-eligibility.html
@@ -35,9 +35,9 @@
 		<p class="govuk-body">If you’ve already started your application using this service, you can <a
 				href="../create-account-sign-in">sign in to continue working on it</a>.</p>
 
-		<p class="govuk-heading-m">Teaching services account</p>
+		<p class="govuk-heading-m">{{ data.tsa }}</p>
 
-		<p>You’ll need to create a Teaching services account to Apply for QTS in England. You can do this at the start of your application if you're eligible.</p>
+		<p>You’ll need to create a {{ data.tsa }} to {{ data.qts }}. You can do this at the start of your application if you're eligible.</p>
 
 		<a role="button" draggable="false"
 		   class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-9"
