--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -29,3 +29,9 @@ $govuk-assets-path: '/govuk/assets/';
 .govuk-notification-banner--success {
     margin: 1em 0 0 0;
 }
+
+.gem-c-devolved-nations {
+    background: #f3f2f1;
+    margin-bottom: 15px;
+    padding: 15px;
+  }
