--- a/app/views/account/_summary-card.html
+++ b/app/views/account/_summary-card.html
@@ -7,7 +7,7 @@
       html: 'Name'
     },
     value: {
-      html: data['fullName'] | title if data['firstName'] else 'John Smith'
+      html: data['fullName'] | title if data['firstName'] else 'Ria Smith'
     },
     actions: {
       items: [{
