--- a/app/views/auth/nino.html
+++ b/app/views/auth/nino.html
@@ -20,7 +20,7 @@
   hint: {
     html: "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
   },
-  value: data['phone'] or phone
+  value: data['national-insurance-number'] or national-insurance-number
 }) }}
 
 
