Update to fix mobile code

--- a/app/views/auth/_finish.html
+++ b/app/views/auth/_finish.html
@@ -1,9 +1,9 @@
 {%- if auth -%}
-<p>Next time, you can sign in just using your email {{ data.email or 'email@example.com' }}.</p>
+<p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
 {%- endif -%}
 
 {%- if data['matchAccount'] == 'true' -%}
     <p>Next time, sign into your account using {{ data.email or 'email@example.com' }}.  </p>
 {%- endif -%}
 
-<p class="govuk-!-margin-bottom-6">Continue <strong>{{ data.onwardContinue or data.qts }}</strong>. </p>
+<p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qts }}</strong>. </p>
