--- a/app/views/auth/_name.html
+++ b/app/views/auth/_name.html
@@ -2,6 +2,9 @@
 {{ govukInput({
   id: "[firstName]",
   name: "[firstName]",
+  hint: {
+    text: "Or given names"
+  },
   label: {
     text: "First name",
     classes: 'govuk-label--s'
@@ -12,6 +15,9 @@
 {{ govukInput({
   id: "[lastName]",
   name: "[lastName]",
+  hint: {
+    text: "Or family names"
+  },
   label: {
     text: "Last name",
     classes: 'govuk-label--s'
