--- a/app/views/auth/resend-phone.html
+++ b/app/views/auth/resend-phone.html
@@ -3,5 +3,5 @@
 {% set buttonText = 'Request security code' %}
 
 {% block form %}
-  {% include 'auth/_resend-phone.html' %}
+  {% include 'auth/_resend-phone-code.html' %}
 {% endblock %}
