--- a/app/views/auth/_phone-code.html
+++ b/app/views/auth/_phone-code.html
@@ -25,7 +25,7 @@
 
 {%- if auth or account -%}
   <p>
-    <a href="resend-phone">I have not received an text message</a>
+    <a href="/auth/resend-phone">I have not received an text message</a>
   </p>
 {%- elseif signIn -%}
   <p>
