--- a/app/views/account/_summary-card.html
+++ b/app/views/account/_summary-card.html
@@ -18,6 +18,20 @@
   },
   {
     key: {
+      html: 'Name on certificates'
+    },
+    value: {
+      html: data['dqtName'] +'<p class="govuk-hint govuk-!-font-size-14">Displayed on teaching certificates </p>'
+    },
+    actions: {
+      items: [{
+        text: 'Change',
+        href: "name-dqt"
+      }]
+    }
+  },
+  {
+    key: {
       html: 'Date of birth'
     },
     value: {
