--- a/app/views/account/account-details.html
+++ b/app/views/account/account-details.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title = "Your sign in details" %}
+{% set title = "Your details" %}
 {% set showSubheader = true %}
 {% set subHeader = data.tsa %}
 {% set signedIn = 'true' %}
