--- a/app/views/auth/_account-info.html
+++ b/app/views/auth/_account-info.html
@@ -10,4 +10,5 @@
     your name and date of birth
   </li>
 </ul>
-  <p>Once you've created an account, you can continue {{ data.onwardContinue or data.qs }}.</p>
+<p>If we recognise any of your details, we may ask some follow-up questions. This is so we can link all of your information together and avoid multiple accounts.</p>
+  <p>Once you've created an account, you can continue to access your teaching qualifications.</p>
