update to include DQT

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -14,7 +14,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/pagination";
 @import "patterns/related-items";
 @import "patterns/task-list";
-@import "patterns/panel";
+@import "patterns/_panel";
 @import "patterns/button";
 @import "govuk-page-masthead";
 
