--- a/app/views/auth/create-account-interstitial.html
+++ b/app/views/auth/create-account-interstitial.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "layouts/forms-interrupt.html" %}
 {% set title %}We could not find an account{% endset %}
 {% set buttonText %}Create an account{% endset %}
 
