--- a/app/views/auth/finish.html
+++ b/app/views/auth/finish.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "layouts/forms-interrupt.html" %}
 {% set title %}You've created a {{ serviceName }}{% endset %}
 {% set hideBackLink = true %}
 {% set serviceNameOnwards = data.qts %}
