--- a/app/views/layouts/forms-qts.html
+++ b/app/views/layouts/forms-qts.html
@@ -23,10 +23,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       {% if showSubheader %}
-      <span class="govuk-caption-l">{{subHeader}}</span>
+      <span class="govuk-caption-xl">{{subHeader}}</span>
        {% endif %}
 
-      <h1 class="govuk-heading-l">{{ title | safe }}</h1>
+      <h1 class="govuk-heading-xl">{{ title | safe }}</h1>
 
 
       <form {{formActionHtml | safe }} method="post" novalidate spellcheck="false">
