--- a/app/views/qualifications/ga-account.html
+++ b/app/views/qualifications/ga-account.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "layouts/forms-interrupt.html" %}
 {% set hideButton = true %}
 {% set accountPath = '/user-research/qual/create-account' %}
 {% set signIn = '/user-research/qual/sign-in' %}
