create account content iteration

--- a/app/views/auth/_about-account.html
+++ b/app/views/auth/_about-account.html
@@ -1,5 +1,6 @@
 {% set details %}
     <p>{{ data.tsaP }} are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.</p>
+    <p>If we already have your details in our records, we’ll try to link them with your new {{ data.tsa }}. Some of your details may be different now, but you can change them in your account.</p>
     <p>At the moment there are only a few DfE services using {{ data.tsaP }}. In the future, you’ll be able to use your account details to sign in to most DfE teaching services.</p>
 {% endset %}
 
