--- a/app/views/account/name-dqt.html
+++ b/app/views/account/name-dqt.html
@@ -5,7 +5,8 @@
 {% set backlink = true %}
 
 {% block form %}
-<p>If you’ve changed your name, you’ll need to provide evidence to update it. We'll give you detailed information about providing evidence when you select continue. Changes can take up to 5 working days.</p>
+<p>If you’ve changed your name, you’ll need to provide evidence to update it.</p>
+<p>We'll give you detailed information about providing evidence when you select continue. Changes can take up to 5 working days.</p>
 <p>First, tell us what you would like to change your name to.<p>
 {{ govukInput({
   id: "[firstNameDQT]",
