--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,6 +26,7 @@
 {% block content %}
 <h2 class="govuk-heading-m">{{ data.qs }}  </h2>
 <p><a href="/qualifications/start">Qualifications start page</a> </p>
+<p><a href="/account/account-details?service=qs">Qualifications account-page</a> </p>
 
 
 
