--- a/app/views/account/account-details.html
+++ b/app/views/account/account-details.html
@@ -11,7 +11,7 @@
   <div id="bannerBar">
    
 {%- if data['service'] == 'qs' -%}
-<a class="govuk-back-link" href="https://qualifications-prototype.herokuapp.com/landing-pages/v3/qualifications"> Back to Access your teaching qualifications</a>
+<a class="govuk-back-link" href="https://qualifications-prototype.herokuapp.com/user-research/mvp/"> Back to Access your teaching qualifications</a>
 
 {%- else -%}
   <a class="govuk-back-link" href="/qts/apply-for-qts?alert=hide"> Back to {{ data.qtsLc }}</a>
