content dqt look up
content for the the different dqt look up scenarios:
- found
- not found
- pending
- basic auth

--- a/app/views/auth/finish.html
+++ b/app/views/auth/finish.html
@@ -4,22 +4,23 @@
 {% set hideButton = true %}
 
 <!-- title of page scenarios  -->
-{% set title %} 
+{% set title %}
   {%- if data['dqt-check'] == 'found' -%}
   <!-- A DQT record has been found - user creates account - accesses service -->
-  Found
+  You've created a {{ serviceName }}
+  {% set hideButton = false %}
   {%- elseif data['dqt-check'] == 'failed' -%}
   <!-- No DQT record - account has been created - user can't access service -->
-  Failed
+  You cannot access this service yet
 
   {%- elseif data['dqt-check'] == 'pending' -%}
   <!-- No DQT record found - account has been created - TRA sent ticket to locate user - user can't access service -->
-  Pending
+  You cannot access this service yet
 
   {%- elseif not data['dqt-check'] or data['dqt-check'] == 'auth' -%}
   <!-- basic auth journey - no DQT checks made -->
   You've created a {{ serviceName }}
- 
+
   {% set hideButton = false %}
 
   {%- endif -%}
