--- a/app/views/auth/_finish.html
+++ b/app/views/auth/_finish.html
@@ -2,26 +2,41 @@
 <!-- title of page scenarios  -->
   {%- if data['dqt-check'] == 'found' -%}
   <!-- A DQT record has been found - user creates account - accesses service -->
-  Found
+  {%- if 'found' -%}
+  <p>We’ve found your details in our records and linked them to your {{ serviceName }}.</p>
+  <p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
+  <p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qs }}</strong>. </p>
+  {%- endif -%}
+
+
   {%- elseif data['dqt-check'] == 'failed' -%}
   <!-- No DQT record - account has been created - user can't access service -->
-  Failed
+  {%- if 'failed' -%}
+  <p>This could be because you do not have teaching qualifications, for example, qualified teacher status (QTS).</p>
+  <h2 class="govuk-heading-s">Your {{ serviceName }}</h2>
+  <p>You've created a {{ serviceName }}. When you're eligible to use this service, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
+  {%- endif -%}
 
   {%- elseif data['dqt-check'] == 'pending' -%}
   <!-- No DQT record found - account has been created - TRA sent ticket to locate user - user can't access service -->
-  Pending
+  {%- if 'pending' -%}
+  <p>We need to do some more checks to see if your details are in our records.</p>
+  <p>We'll email you when we've completed those checks - we may need some more information.</p>
+  <h2 class="govuk-heading-s">Your {{ serviceName }}</h2>
+  <p>You've created a {{ serviceName }}. To sign in to this service in the future, you’ll just need your email address ({{ data.email or 'email@example.com' }}).</p>
+  {%- endif -%}
 
   {%- elseif not data['dqt-check'] or data['dqt-check'] == 'auth' -%}
   <!-- basic auth journey - no DQT checks made -->
     {%- if auth -%}
     <p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
     {%- endif -%}
-    
+
     {%- if data['matchAccount'] == 'true' -%}
         <p>Next time, sign into your account using {{ data.email or 'email@example.com' }}.  </p>
     {%- endif -%}
-    
-    <p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qts }}</strong>. </p>
-    
+
+    <p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qs }}</strong>. </p>
+
 
   {%- endif -%}
