--- a/app/views/auth/_summary-card.html
+++ b/app/views/auth/_summary-card.html
@@ -137,7 +137,7 @@
           href: "how-qts"
         }]
       }
-    } if data['has-qts-from-provider'] != 'Yes' and data['have-qts'] != 'No',
+    } if data['has-qts-from-provider'] != 'Yes' and data['have-qts'] == 'Yes',
     {
       key: {
         html: 'Where did you get your QTS?'
