--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,18 +24,32 @@
 {% endblock %}
 
 {% block content %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds-from-desktop">
+
 <h2 class="govuk-heading-m">{{ data.qs }}  </h2>
+<p>Journey incudes basic auth + dqt lookup</p>
+<p class="govuk-hint">Password for qual service (qs)</p>
 <p><a href="/qualifications/start">Qualifications start page</a> </p>
 <p><a href="/account/account-details?service=qs">Qualifications account-page</a> </p>
+<p><a target="_blank" href="https://lucid.app/lucidspark/b88634d8-2452-4ed6-9c7c-010383770731/edit?view_items=EA-zAgXC1i4K&invitationId=inv_9a36d007-204a-41ed-b8c3-1f49d5e63a05">Lucid ID flow for the qual service</a> </p>
 
+
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 
 <h2 class="govuk-heading-m">{{ data.qts }}  </h2>
+<p>Journey incudes basic auth</p>
+
 <p><a href="/qts/eligibility/start-eligibility">Check eligibility start page</a> </p>
 <p><a href="/qts/eligibility/eligible">Eligible user start page </a> </p>
 <p><a href="/qts/apply-for-qts">QTS task list - account view </a> </p>
+<p><a  target="_blank" href="https://lucid.app/lucidspark/b88634d8-2452-4ed6-9c7c-010383770731/edit?view_items=KZDsx9Mr-.mh&invitationId=inv_9a36d007-204a-41ed-b8c3-1f49d5e63a05">Lucid flow of ID flow integrated with QTS </a> </p>
 
-<h2 class="govuk-heading-m">DQT end points </h2>
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+
+<h2 class="govuk-heading-m">Account created page + DQT end points scenarios </h2>
 <p>User creates account and a DQT look up occurs</p>
 <p>
   <a href="/auth/finish?dqt-check=found">Dqt record found</a> <br>
@@ -53,7 +67,11 @@
   <a href="/auth/finish?dqt-check=auth">Basic auth - no DQT</a> <br>
   <span class="govuk-hint">Standard pattern for basic auth</span>
 </p>
-<h2 class="govuk-heading-m">Edge cases </h2>
+
+
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<h2 class="govuk-heading-m">Basic edge cases </h2>
+<p>These scenarios demonstate the duplicate account prevention built into the basic auth flow</p>
 <p>
   <a href="/user-research/qts/sign-in?email=new@email.com">Sign in (no account exists)</a> <br>
   <span class="govuk-hint">User attempts to sign in but does not have an account ( new@email.com )</span>
@@ -76,24 +94,52 @@
   <span class="govuk-hint">User attempts to create an account and enters a shared school email address  ( head@school.com )</span>
 </p>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h2 class="govuk-heading-m">Basic auth journey</h2>
-    <p>journey has no checks on DQT and capture data for account creation</p>
-   <p><a href="/auth/start">Auth flow</a></p>
-        
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<h2 class="govuk-heading-m">DfE Identity account - scenarios </h2>
+<p>
+  <a href="/user-research/qts/sign-in?email=new@email.com">Sign in (no account exists)</a> <br>
+</p>
 
 
-    <h2 class="govuk-heading-m">My account</h2>
-    <p>GAI account functionality integrated within a service</p>
-    <p><a href="/account/account-details">My Account</a></p>
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 
-    <h2 class="govuk-heading-m">Other features </h2>
-    <p><a href="/auth/phone">Phone</a> Inpage form</p>
-    <p><a href="/auth/phone">Phone</a> Radio option view</p>
+<h2 class="govuk-heading-m">Basic auth journey</h2>
+<p><a href="/auth/start">Auth flow</a></p>
+  
 
 
+<p >My account</p>
+<p>GAI account functionality integrated within a service</p>
+<p><a href="/account/account-details">My Account</a></p>
+
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<h2 class="govuk-heading-m">Older work</h2>
+
+
+{% set archive %}
+<h2 class="govuk-heading-m">Other features </h2>
+<p><a href="/auth/phone">Phone</a> Inpage form</p>
+<p><a href="/auth/phone">Phone</a> Radio option view</p>
+{% endset -%}
+
+{{ govukDetails({
+  summaryText: "Archived",
+  html: archive
+}) }}
+</div>
+<div class="govuk-grid-column-one-third">
+  <h3 class="govuk-heading-s">Other links</h3>
+  <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
+    <li>
+      <a href='https://tra-digital-design-history.herokuapp.com/get-an-identity/'>Design history for {{serviceName}}</a>
+    </li>
+    <li>
+      <a href='https://github.com/DFE-Digital/get-an-identity-prototype'>Github repo</a>
+    </li>
+  
+  </ul>
 </div>
 </div>
 {% endblock %}
