Update to index

--- a/app/views/account/_summary-card.html
+++ b/app/views/account/_summary-card.html
@@ -40,7 +40,7 @@
         href: "name-dqt-overview"
       }]
     } if data['nameLozenge'] != "show" 
-  } ,
+  } if data['dob-name'] == "show",
   {
     key: {
       html: 'Date of birth'
