--- a/app/views/index.html
+++ b/app/views/index.html
@@ -98,7 +98,9 @@
 
 <h2 class="govuk-heading-m">DfE Identity account - scenarios </h2>
 <p>
-  <a href="/user-research/qts/sign-in?email=new@email.com">Sign in (no account exists)</a> <br>
+  <a href="/account/account-details?service=qs&dob-dqt=hide&dqt-name=show">DQT name + ID Name & Dob data</a> <br>
+  <a href="/account/account-details?service=qs&dob-dqt=show&dqt-name=show">DQT Dob differnt from ID dob</a> <br>
+  <a href="/account/account-details?service=qs&dob-dqt=show&dqt-name=hide">No DQT data</a> <br>
 </p>
 
 
