Udate to account view

--- a/app/views/account/_summary-card.html
+++ b/app/views/account/_summary-card.html
@@ -40,7 +40,7 @@
         href: "name-dqt-overview"
       }]
     } if data['nameLozenge'] != "show" 
-  } if data['dob-name'] == "show",
+  } if data['dqtName'] == "show",
   {
     key: {
       html: 'Date of birth'
@@ -68,7 +68,7 @@
         href: "date-of-birth"
       }]
     } 
-  } if data['dob-dqt'] == "show",
+  } if data['DqtDob'] == "show",
   {
     key: {
       html: 'Date of birth'
@@ -82,7 +82,7 @@
         href: "date-of-birth"
       }]
     } 
-  } if data['dob-dqt'] == "show" 
+  } if data['DqtDob'] == "show" 
   ]
 }) }}
 
