content id and quals review
Review the id and quals journey.
Changes to:
- start page
-change official name
- confirmation messages

--- a/app/views/account/name-dqt-overview.html
+++ b/app/views/account/name-dqt-overview.html
@@ -9,7 +9,7 @@
 
 <p>We'll give you detailed information about providing evidence . Changes can take up to 5 working days.</p>
 
-<p>Your certicates will be changed as soon as the update is confirmed.</p>
+<p>We'll email you to confirm that we've made the changes.</p>
 
 
 {% endblock %}
