--- a/app/views/qualifications/start.html
+++ b/app/views/qualifications/start.html
@@ -6,8 +6,8 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <span class="govuk-caption-l">Guidance</span>
-        <h1 class="govuk-heading-l govuk-!-margin-bottom-8">{{ serviceName }}</h1>     
-        
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-8">{{ serviceName }}</h1>
+
         <p class="govuk-body-l">Find out how you can access your individual teacher record.</p>
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
@@ -17,7 +17,7 @@
 
 
 <div class="govuk-grid-column-two-thirds">
-    
+
     <ul class="govuk-list govuk-!-font-size-16">
         <li>
             From: <a class="govuk-!-font-weight-bold" href="https://www.gov.uk/government/organisations/teaching-regulation-agency">Regulation Agency</a>
@@ -34,13 +34,16 @@
     </p>
     <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
         <li>
-            view and download your teaching certificates
+            download your teaching certificates
+        </li>
+        <li>
+            change the name on your teaching certificates
         </li>
         <li>
             check your qualification status
         </li>
         <li>
-            update your personal details
+            check your early career teacher induction status
         </li>
 
     </ul>
@@ -48,14 +51,14 @@
         <h2 class="govuk-heading-s govuk-!-margin-bottom-0">
             This service is for qualified teachers in England
         </h2>
-        <ul class="govuk-list govuk-!-margin-top-1 govuk-!-margin-bottom-0">         
+        <ul class="govuk-list govuk-!-margin-top-1 govuk-!-margin-bottom-0">
             <li><a class="govuk-link" href="https://www.ewc.wales/site/index.php/en/registration/applying-for-registration.html">Teachers in Wales</a></li>
             <li><a class="govuk-link" href="https://www.gtcs.org.uk/GTCS-login.aspx">Teachers in  Scotland</a></li>
         </ul>
     </section>
     <h1 class="govuk-heading-m">Before you start</h1>
 
-	<p>You’ll need to create a {{ data.tsa }} to {{ data.qs }}. You can do this at the start of your application if you're eligible.</p>
+	<p>You’ll need to create a {{ data.tsa }} to access your teaching qualifications. You'll use the account to sign-in to this service and other DfE teaching services.</p>
 
     {{ govukButton({
         text: "Start now",
@@ -63,7 +66,7 @@
         isStartButton: true
     }) }}
   </div>
-  
+
     <div class="govuk-grid-column-one-third">
         <div class="gem-c-related-navigation govuk-!-margin-bottom-8">
             <br>
@@ -86,7 +89,7 @@
                 </li>
             </ul>
             </div>
-        </div>    
+        </div>
 
  </div>
 
