--- a/app/views/account/account-details.html
+++ b/app/views/account/account-details.html
@@ -31,7 +31,7 @@
 {%- if data['service'] == 'qs' -%}
   {{ govukButton({
     html: 'Back to Access your teaching qualifications',
-    href: 'https://qualifications-prototype.herokuapp.com/landing-pages/v3/qualifications'
+    href: 'https://qualifications-prototype.herokuapp.com/user-research/mvp/'
   }) }}
 {%- else -%}
   {{ govukButton({
