--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,7 +31,7 @@
 <p>Journey incudes basic auth + dqt lookup</p>
 <p class="govuk-hint">Password for qual service (qs)</p>
 <p><a href="/qualifications/start">Qualifications start page</a> </p>
-<p><a href="/account/account-details?service=qs">Qualifications account-page</a> </p>
+<p><a href="/user-research/qual/account">Qualifications account-page</a> </p>
 <p><a target="_blank" href="https://lucid.app/lucidspark/b88634d8-2452-4ed6-9c7c-010383770731/edit?view_items=EA-zAgXC1i4K&invitationId=inv_9a36d007-204a-41ed-b8c3-1f49d5e63a05">Lucid ID flow for the qual service</a> </p>
 
 
@@ -97,11 +97,9 @@
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <h2 class="govuk-heading-m">DfE Identity account - scenarios </h2>
-<p>
-  <a href="/account/account-details?service=qs&dob-dqt=hide&dqt-name=show">DQT name + ID Name & Dob data</a> <br>
-  <a href="/account/account-details?service=qs&dob-dqt=show&dqt-name=show">DQT Dob differnt from ID dob</a> <br>
-  <a href="/account/account-details?service=qs&dob-dqt=show&dqt-name=hide">No DQT data</a> <br>
-</p>
+<p><a href="/account/account-details?service=qs&showDqtDob=hide&showDqtName=show&showDqtDobAlert=hide&alert=hide">DQT name + ID Name & DOB data</a> </p>
+<p><a href="/account/account-details?service=qs&showDqtDob=show&showDqtName=show&showDqtDobAlert=show&alert=hide">DQT DOB & ID DOB</a> </p>
+<p> <a href="/account/account-details?service=qs&showDqtDob=hide&showDqtName=hide&showDqtDobAlert=hide&alert=hide">No DQT data</a> <br></p>
 
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
