--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -32,7 +32,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         active: true if account == 'true'
       },      
       {
-        href: "/account/signed-out",
+        href: "/user-research/qts/sign-out",
         text: "Sign out"
       }
     ] if signedIn == 'true'
