--- a/app/views/account/interstitial.html
+++ b/app/views/account/interstitial.html
@@ -1,31 +1,20 @@
-{% extends "layouts/forms-qts.html" %}
-{% set title %}Change your account details{% endset %}
+{% extends "layouts/forms-interrupt.html" %}
+{% set title %}DfE Identity account{% endset %}
 {% set account  = 'true' %}
 {% set signedIn = 'true' %}
 {% set hideButton = 'true' %}
-{% set showSubheader = true %}
-{% set subHeader = data.tsa %}
+
 
 
 
 {% block form %}
-<p class="govuk-!-margin-bottom-6">You use your {{ data.tsa }} to sign in to '{{ data.qts }}'. </p>
-<p>You can change these details in your {{ data.tsa }}</p>
 
-<ul class="govuk-list govuk-list--bullet">
-    <li>
-        email address
-    </li>
-    <li>
-        name
-    </li>
-    <li>
-        date of birth
-    </li>
-    <li>
-        mobile number
-    </li>
-</ul>
-<p><a href='/account/account-details'>Change your account details in your {{ data.tsa }}</a></p>
 
+<p class="govuk-!-margin-bottom-6">You can change sign in and personal details in your {{ serviceName }}. </p>
+<p class="govuk-!-margin-bottom-6">You use your {{ serviceName }} to sign in to <b>'{{ data.qts }}'</b>. </p>
+
+{{ govukButton({
+    classes: "app-button--inverse govuk-!-margin-bottom-0",
+    html: buttonText if buttonText else 'Continue'
+  }) }}
 {% endblock %}
