--- a/app/views/account/signed-out.html
+++ b/app/views/account/signed-out.html
@@ -6,9 +6,9 @@
 
 {% block form %}
 
-<p>You are now signed out of <b>{{ data.onwardContinue  or 'Access your teaching qualifications' }}</b>.</p>
+<p>You’ve signed out of <b>{{ data.onwardContinue  or 'Access your teaching qualifications' }}</b>.</p>
 
-<p>Back to <a href="#">{{data.onwardContinue  or 'Access your teaching qualifications' }}</a></p>
+<p>Sign-in to <a href="#">{{data.onwardContinue  or 'Access your teaching qualifications' }}</a>.</p>
 
 
 
