--- a/app/views/account/evidence.html
+++ b/app/views/account/evidence.html
@@ -8,7 +8,7 @@
 <p>Your evidence must be in pdf or jpeg format and be a scan of 1 of the following:</p>
 
 <ul class="govuk-list govuk-list--bullet">
-  {%- if data['editType'] == 'name' -%}
+  {%- if data['editType'] == 'name-dqt' -%}
       <li>
         marriage certificate
       </li>
